@@ -1,21 +1,28 @@
 import java.io.FileWriter;
 import java.io.IOException;
-import java.util.ArrayList;
-import java.util.Enumeration;
-import java.util.Hashtable;
-import java.util.Iterator;
+import java.util.*;
+import java.util.Map.Entry;
+
 
 public class DBApp implements DBAppInterface{
 
+    private HashSet<String> dataTypes;
+
     @Override
-    public void init() throws IOException {
-    }
+    public void init() throws IOException { }
 
     @Override
     public void createTable(String tableName, String clusteringKey, Hashtable<String, String> colNameType, Hashtable<String, String> colNameMin, Hashtable<String, String> colNameMax) throws DBAppException, IOException {
         FileWriter csvWriter = new FileWriter("src/main/resources/metadata.csv", true);
         ArrayList<String> AllTablesNames = new ArrayList<>(); // To keep track of all tables created
         // Exceptions
+
+
+        //
+        String invalidCol = checkColumnTypes(colNameType);
+        if(invalidCol != null)
+            throw new DBAppException("Invalid column type: "+invalidCol +".");
+
 
         // The clusteringKey is not null.
         if(clusteringKey.equals(null) || clusteringKey.equals("") )
@@ -31,7 +38,7 @@ public class DBApp implements DBAppInterface{
 
         for(int i=0; i<AllTablesNames.size(); i++){
             if(tableName.equals(AllTablesNames.get(i))){
-                throw new DBAppException("The table name already exists.");}}
+                throw new DBAppException("Table name already exists.");}}
 
         AllTablesNames.add(tableName);
 
@@ -94,7 +101,7 @@ public class DBApp implements DBAppInterface{
 
     @Override
     public void insertIntoTable(String tableName, Hashtable<String, Object> colNameValue) throws DBAppException {
-// do we insert the rows as a hashtable or an arraylist?
+// do we insert the rows as a hashtable or an arraylist? vector!
 
         /*
         - check whether there is an existing table with the same name.
@@ -127,13 +134,32 @@ public class DBApp implements DBAppInterface{
         return null;
     }
 
+
+
+    private String checkColumnTypes(Hashtable<String, String> colNameType) //check if user entered correct type while creating table
+    {
+
+        dataTypes = new HashSet<String>();
+
+        dataTypes.add("java.lang.Integer");
+        dataTypes.add("java.lang.String");
+        dataTypes.add("java.lang.Date");
+        dataTypes.add("java.lang.double");
+
+        for(Entry<String, String> entry: colNameType.entrySet())
+            if(!dataTypes.contains(entry.getValue()))
+                return entry.getKey();
+        return null;
+    }
+
+
     public static void main(String[] args) throws DBAppException {
         Hashtable htblColNameValue = new Hashtable( );
         String strTableName= "Yes";
         DBApp dbApp= new DBApp();
-        htblColNameValue.put("id", new Integer( 453455 ));
+        htblColNameValue.put("id", Integer.valueOf( 453455 )); // fixed the "dashed" Integer elkan 3amlha 3shan kan metal3 error
         htblColNameValue.put("name", new String("Ahmed Noor" ) );
-        htblColNameValue.put("gpa", new Double( 0.95 ) );
+        htblColNameValue.put("gpa", Double.valueOf( 0.95 ) );
         dbApp.insertIntoTable(strTableName , htblColNameValue );
     }
 }
